--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8"/>
-        <title>Cobrinha com IA</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
 
-    <body>
-        <h1>Cobrinha IA</h1>
-        <canvas id="game" width="400" height="400"></canvas>
+<head>
+    <meta charset="UTF-8" />
+    <title>Cobrinha com IA</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
-        <script src="script.js"></script>
-    </body>
+<body>
+    <h1>Cobrinha IA</h1>
+    <canvas id="game" width="400" height="400"></canvas>
+    <canvas id="nn" width="400" height="200"></canvas>
+
+
+    <script src="script.js"></script>
+</body>
+
 </html>
-
